--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.468.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
