--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "framer-motion": "^11.18.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
